--- a/package.json
+++ b/package.json
@@ -1,8 +1,13 @@
 {
-  "name": "ollama_hub",
+  "name": "ollama-hub-gui",
   "displayName": "Ollama Hub: GUI for Local Models",
+  "publisher":"chetanjangir",
   "description": "graphical interface for managing and interacting with your local Ollama models(like deepseek) directly within VS Code.",
   "version": "0.0.1",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/chetanjangir0/Ollama-Hub-a-vs-code-extension.git"
+  },
   "engines": {
     "vscode": "^1.96.0"
   },
