--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "categories": [
     "Other"
   ],
-  "activationEvents": ["*"],
+  "activationEvents": [],
   "main": "./out/extension.js",
   "contributes": {
     "commands": [
