--- a/package.json
+++ b/package.json
@@ -3,7 +3,11 @@
   "displayName": "Ollama Hub: GUI for Local Models",
   "publisher":"chetanjangir",
   "description": "graphical interface for managing and interacting with your local Ollama models(like deepseek) directly within VS Code.",
-  "version": "0.0.1",
+  "version": "0.0.4",
+  "files": [
+    "out/**",
+    "src/webview.html"
+  ],
   "repository": {
     "type": "git",
     "url": "https://github.com/chetanjangir0/Ollama-Hub-a-vs-code-extension.git"
@@ -17,6 +21,9 @@
   "activationEvents": [],
   "main": "./out/extension.js",
   "contributes": {
+    "webview": {
+      "default": "src/webview.html"
+    },
     "commands": [
       {
         "command": "ollama_hub.chat",
